@@ -246,11 +246,6 @@
 
 #-mts 250
 
-# Set to not use a UDP connection for players. You typically do NOT want to
-# do this (UDP is good!)
-
-#-noudp
-
 # The server will listen on this port.  Default port is 5154.
 
 #-p 5154
@@ -349,11 +344,6 @@
 # as well as, or instead of logging to a file.
 
 #-reportpipe command
-
-# This requires clients to use UDP (a good thing).  This will generally
-# make the server behave better, and make play more smooth.
-
-#-requireudp
 
 # Use +s to have the server generate a certain number of extra super flags
 # and have them available at all times.
