@@ -120,7 +120,6 @@ const char *usageString =
 "[-replay] "
 "[-reportfile <filename>] "
 "[-reportpipe <filename>] "
-"[-requireudp] "
 "[+s <flag-count>] "
 "[-s <flag-count>] "
 "[-sa] "
@@ -225,7 +224,6 @@ const char *extraUsageString =
 "\t-replay: setup the server to replay a previously saved game\n"
 "\t-reportfile <filename>: the file to store reports in\n"
 "\t-reportpipe <filename>: the program to pipe reports through\n"
-"\t-requireudp: require clients to use udp\n"
 "\t+s: always have <num> super flags (default=16)\n"
 "\t-s: allow up to <num> super flags (default=16)\n"
 "\t-sa: insert antidote superflags\n"
@@ -1003,9 +1001,6 @@ void parse(int argc, char **argv, CmdLineOptions &options, bool fromWorldFile)
       options.reportPipe = argv[i];
     } else if (strcmp(argv[i], "-tkannounce") == 0) {
       options.tkAnnounce = true;
-    } else if (strcmp(argv[i], "-requireudp") == 0) {
-      std::cerr << "require UDP clients!" << std::endl;
-      options.requireUDP = true;
     } else if (strcmp(argv[i], "+s") == 0 || strcmp(argv[i], "-s") == 0) {
       // with +s all flags are required to exist all the time
       allFlagsOut = argv[i][0] == '+' ? true : false;
